[package]
name = "aava"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.x"
rand = "0.7.x"
rand_distr = "0.2.x"
static_assertions = "1.1.x"
