[package]
name = "aava"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.x"
rand = "0.7.x"
rand_distr = "0.2.x"
static_assertions = "1.1.x"
rustc-hash = "1.1.x"
once_cell = "1.3.x"
paste = "0.1.x"
# https://github.com/seiflotfy/rust-farmhash
# farmhash is an alternative to jenkins

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.7.x", features = ["small_rng"] }

[[bench]]
name = "random_graphs"
harness = false

[[bench]]
name = "min_cut"
harness = false

[[bench]]
name = "graph_creation"
harness = false

[[bench]]
name = "apl"
harness = false
